--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,8 +1,21 @@
 @import "tailwindcss";
 
 :root {
-  --background: #ffffff;
-  --foreground: #171717;
+  --background: #2A2929;
+  --foreground: #ffffff;
+}
+
+@theme {
+  --animate-wiggle: wiggle 1s ease-in-out infinite;
+  @keyframes wiggle {
+    0%,
+    100% {
+      transform: rotate(-3deg);
+    }
+    50% {
+      transform: rotate(3deg);
+    }
+  }
 }
 
 @theme inline {
@@ -14,13 +27,97 @@
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --background: #0a0a0a;
+    --background: #2A2929;
     --foreground: #ededed;
   }
+}
+@keyframes bounceOut {
+  0% {
+      transform: scale(0.9);
+      opacity:0;
+  }
+  50% {
+      transform: scale(1.2);
+      opacity: 1;
+  }
+  100% {
+      transform: scale(1);
+      opacity: 1;
+  }
+}
+@keyframes fadeOut {
+  0% {
+      opacity: 1;
+  }
+
+  100% {
+      opacity: 0;
+  }
+}
+.animate-bounceOut {
+  animation: bounceOut 0.5s ease-in-out
+}
+
+.fadeOut {
+  animation: fadeOut 3s 3s;
 }
 
 body {
   background: var(--background);
   color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: DIN Alternate;
+  justify-content: center;
+  align-items: center;
+}
+
+#bigname {
+  font-size: 10rem;
+  font-weight: 700;
+  line-height: 1;
+  justify-content: center;
+  display: flex;
+  color: #fff;
+  position:relative;
+  text-shadow: 2px 2px 5px rgba(60, 60, 60, 0.5);
+  z-index: 3;
+
+}
+
+#bigname :hover{
+  color: aqua;
+  text-shadow: 2px 2px 5px rgba(0,0,0,0.5);
+}
+
+
+#showcase {
+  position: relative;
+  margin-top: -20px;
+  z-index: 0;
+}
+
+footer {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
+  margin-top: 40px;
+  padding: 40px 0px 40px;
+  justify-content: center;
+  text-align: center;
+  font-size: 14px;
+  color: #666;
+  background: #000;
+ }
+
+footer p {
+  margin-top: 10px;
+ }
+
+
+.wrapper {
+  padding: 40px 85px 40px;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+
 }
