--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -11,11 +11,13 @@
     line-height: 24px;
     text-align: left;
     backdrop-filter: blur(10px) ;
+    
 }
 
 #header {
     padding: 10px 0;
     display: flex;
+   
     align-items: center;
     height: 80px;
     transition: all 0.5s;
@@ -26,6 +28,7 @@
 
 .sticky-wrapper .container {
     width: 100%;
+    flex-wrap: wrap;
     padding-right: 15px;
     padding-left: 15px;
     margin-right: auto;
@@ -79,28 +82,5 @@
     opacity: 0;
     
   }
-  
-  /* Bouncing Drop Effect */
-  @keyframes bounceDown {
-    0% {
-      transform: translateY(-10px);
-    }
-    50% {
-      transform: translateY(10px);
-    }
-    100% {
-      transform: translateY(0);
-    }
-  }
-  
-  /* Fade Out Effect */
-  @keyframes fadeOut {
-    0% {
-      opacity: 1;
-    }
-    100% {
-      opacity: 0;
-      visibility: hidden;
-    }
-  }
+
   
