--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -15,6 +15,7 @@ html, body {
     width: 100%;
     height: 100%;
     position:fixed;
+    overscroll-behavior: none;
   }
 html {
   scroll-behavior: smooth;
@@ -38,3 +39,4 @@ button {
   overflow-x: hidden;
   -webkit-overflow-scrolling: touch; /* nice webkit native scroll */
 }
+
