--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,22 +1,22 @@
 @import "tailwindcss";
 
-
 :root {
-  --background: #2A2929;
+  --background: #2a2929;
   --foreground: #ffffff;
 }
-html, body {
-    background: var(--background);
-    color: var(--foreground);
-    font-family: DIN Alternate;
-    justify-content: center;
-    align-items: center;
-    overflow-x: hidden;
-    width: 100%;
-    height: 100%;
-    position:fixed;
-    overscroll-behavior: none;
-  }
+html,
+body {
+  background: var(--background);
+  color: var(--foreground);
+  font-family: DIN Alternate;
+  justify-content: center;
+  align-items: center;
+  overflow-x: hidden;
+  width: 100%;
+  height: 100%;
+  position: fixed;
+  overscroll-behavior: none;
+}
 html {
   scroll-behavior: smooth;
 }
@@ -39,4 +39,34 @@ button {
   overflow-x: hidden;
   -webkit-overflow-scrolling: touch; /* nice webkit native scroll */
 }
+.hero-nav {
+  display: flex;
+  align-items: center;
+  width: fit-content;
+  height: 50px;
+  border-radius: 10px;
+  background-color: rgba(42, 41, 41, 1); /* Fallback, overridden by Tailwind */
+  padding: 0 15px;
+  margin: 0 auto;
+  justify-content: center;
 
+  backdrop-filter: blur(8px); /* for older browsers if needed */
+  -webkit-backdrop-filter: blur(8px);
+}
+.hero-nav a {
+  color: #979797;
+  text-decoration: none;
+  font-weight: 500;
+  transition: color 0.3s ease;
+}
+
+.hero-nav span {
+  color: #979797;
+}
+
+.cursor-text {
+  width: 2px !important;
+  height: 20px !important;
+  border-radius: 1px !important;
+  background-color: white !important;
+}
